--- a/UI/dashboard.ui
+++ b/UI/dashboard.ui
@@ -3467,7 +3467,7 @@ p, li { white-space: pre-wrap; }
               <property name="geometry">
                <rect>
                 <x>902</x>
-                <y>785</y>
+                <y>784</y>
                 <width>70</width>
                 <height>27</height>
                </rect>
@@ -3524,7 +3524,7 @@ p, li { white-space: pre-wrap; }
                 <x>810</x>
                 <y>360</y>
                 <width>255</width>
-                <height>425</height>
+                <height>420</height>
                </rect>
               </property>
               <property name="sizePolicy">
@@ -14934,11 +14934,14 @@ p, li { white-space: pre-wrap; }
                   <pointsize>9</pointsize>
                  </font>
                 </property>
+                <property name="horizontalScrollBarPolicy">
+                 <enum>Qt::ScrollBarAlwaysOff</enum>
+                </property>
                 <attribute name="horizontalHeaderMinimumSectionSize">
                  <number>5</number>
                 </attribute>
                 <attribute name="horizontalHeaderDefaultSectionSize">
-                 <number>140</number>
+                 <number>100</number>
                 </attribute>
                 <attribute name="horizontalHeaderStretchLastSection">
                  <bool>true</bool>
@@ -23681,7 +23684,7 @@ p, li { white-space: pre-wrap; }
                </font>
               </property>
               <property name="text">
-               <string>SCAPY Injection</string>
+               <string>Scapy Injection</string>
               </property>
              </widget>
             </widget>
@@ -28032,7 +28035,7 @@ p, li { white-space: pre-wrap; }
    </widget>
    <widget class="QMenu" name="menuHelp">
     <property name="title">
-     <string>Help</string>
+     <string>&amp;Help</string>
     </property>
     <widget class="QMenu" name="menuEditing_FISSURE">
      <property name="title">
@@ -28093,7 +28096,7 @@ p, li { white-space: pre-wrap; }
    </widget>
    <widget class="QMenu" name="menuFlow_Graphs">
     <property name="title">
-     <string>Standalone</string>
+     <string>&amp;Standalone</string>
     </property>
     <widget class="QMenu" name="menuStandaloneGSM">
      <property name="title">
@@ -28234,7 +28237,7 @@ p, li { white-space: pre-wrap; }
    </widget>
    <widget class="QMenu" name="menuSDR_Tools">
     <property name="title">
-     <string>Tools</string>
+     <string>&amp;Tools</string>
     </property>
     <widget class="QMenu" name="menuSDR_Tools_2">
      <property name="title">
@@ -28723,7 +28726,7 @@ p, li { white-space: pre-wrap; }
    </widget>
    <widget class="QMenu" name="menuLessons">
     <property name="title">
-     <string>Lessons</string>
+     <string>&amp;Lessons</string>
     </property>
     <addaction name="actionLessonOpenBTS"/>
     <addaction name="actionLessonLuaDissectors"/>
