--- a/UI/Style_Sheets/light.css
+++ b/UI/Style_Sheets/light.css
@@ -8,33 +8,45 @@ QCheckBox[objectName^="checkBox_"]{
     color: @color4;
 }
 QCheckBox[objectName^="checkBox_"]:disabled{
-    color: #C0C0C0;
+    color: @color13;
 }
 QCheckBox[objectName^="checkBox_"]::indicator:unchecked {
-    image: url(@icon_path/light-unchecked.png);
+    image: url(@icon_path/@unchecked_enabled);
 }
 QCheckBox[objectName^="checkBox_"]::indicator:checked {
-    image: url(@icon_path/light-checked.png);
+    image: url(@icon_path/@checked_enabled);
 }
 QCheckBox[objectName^="checkBox_"]::indicator:disabled:checked {
-    image: url(@icon_path/light-checked-disabled.png);
+    image: url(@icon_path/@checked_disabled);
 }
 QCheckBox[objectName^="checkBox_"]::indicator:disabled:unchecked {
-    image: url(@icon_path/light-unchecked-disabled.png);    
+    image: url(@icon_path/@unchecked_disabled);
 }
 QComboBox{
-    font-family: "Ubuntu";
+    font: 11pt "Ubuntu";
+    background-color: @color7; /* qlineargradient makes it go black */
+    /*background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color6, stop: 1 @color7);*/
+    selection-color: #FFFFFF;
+    selection-background-color: #308CC6;
+}
+QComboBox QAbstractItemView {
+    background-color: @color2;
+    color: @color4;
 }
 QComboBox::drop-down {
     border: none;
 }
 QComboBox::down-arrow {
-    image: url(@icon_path/light-down-arrow.png);
+    image: url(@icon_path/@down_arrow_enabled);
     background-color: transparent;
 }
 QComboBox::down-arrow:disabled {
-    image: url(@icon_path/light-down-arrow-disabled.png);
+    image: url(@icon_path/@down_arrow_disabled);
     background-color: transparent;
+}
+QComboBox:disabled{
+    color: @color13;
+    background-color: @color9; /*#qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color8, stop: 1 @color9);*/
 }
 QDoubleSpinBox{
     background-color: @color5;
@@ -43,8 +55,8 @@ QDoubleSpinBox{
     border: 1px solid lightgray;
 }
 QDoubleSpinBox:disabled{
-    background-color: @color5;
-    color: #C0C0C0;
+    background-color: @color9;
+    color: @color13;
     border: 1px solid lightgray;
 }
 QDoubleSpinBox::up-button {
@@ -69,7 +81,7 @@ QListView{
 }
 QListView:disabled{
     background-color: @color5;
-    color: #C0C0C0;
+    color: @color13;
     border: 1px solid lightgray;
 }
 QListWidget{
@@ -80,7 +92,7 @@ QListWidget{
 }
 QListWidget:disabled{
     background-color: @color5;
-    color: #C0C0C0;
+    color: @color13;
     border: 1px solid lightgray;
 }
 QMenu{
@@ -90,17 +102,27 @@ QMenu{
 }
 QMenu::item{
     background-color: transparent;
+    /*padding: 3px 22px 3px 18px;*/
 }
 QMenu::item:selected{
-    color: @color5;
+    color: #FFFFFF;
     background-color: #308CC6;
 }
 QMenu::item:disabled{
-    color: darkgray;
+    color: @color13;
 }
-QMenu:selected{
-    color: @color5;
+QMenuBar {
+    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1, stop: 0 @color2, stop: 1 @color1);
+    color: @color4;
+    border-bottom: 1px solid lightGrey;
+}
+QMenuBar::item:focus:pressed {
+    color: #FFFFFF;
     background-color: #308CC6;
+}
+QMenuBar::item:selected {
+    background: transparent;
+    margin-bottom: @menu_hover_padding; 
 }
 QPlainTextEdit{
     border: 1px solid lightgray;
@@ -112,8 +134,8 @@ QPlainTextEdit{
 QPlainTextEdit:disabled{
     border: 1px solid lightgray;
     border-radius: 0px;
-    background-color: @color7;
-    color: #C0C0C0;
+    background-color: @color9;
+    color: @color13;
     font-family: "Ubuntu";
 }
 QProgressBar{
@@ -129,7 +151,7 @@ QProgressBar{
 }*/
 QProgressBar:disabled{
     background-color: @color5;
-    color: #C0C0C0;
+    color: @color13;
 }
 QPushButton{
     font-family: "Ubuntu";
@@ -138,20 +160,20 @@ QPushButton[objectName^="pushButton_"]{
     border: 1px solid #ABABAB;
     border-radius: 2px;
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color6, stop: 1 @color7);
-    color: black;
+    color: @color12;
     font-family: "Ubuntu";
 }
 QPushButton[objectName^="pushButton_"]:disabled{
     border: 1px solid #C4C4C4;
     border-radius: 2px;
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color8, stop: 1 @color9);
-    color: #C0C0C0;
+    color: @color13;
 }
 QPushButton[objectName^="pushButton_"]:hover{
     border: 1px solid #ABABAB;
     border-radius: 2px;
     background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 @color10, stop: 1 @color11);
-    color: black;
+    color: @color12;
 }
 /*
 QPushButton[objectName^="pushButton_"]:pressed{
@@ -170,14 +192,14 @@ QRadioButton{
     color: @color4;
 }
 QRadioButton:disabled{
-    color: #C0C0C0;
+    color: @color13;
 }
 QRadioButton::indicator:unchecked {
-    image: url(@icon_path/light-radio.png);
+    image: url(@icon_path/@radio_unchecked_enabled);
     padding-left: -1;
 }
 QRadioButton::indicator:checked {
-    image: url(@icon_path/light-radio-checked.png);
+    image: url(@icon_path/@radio_checked_enabled);
     padding-left: -1;
 }
 QSpinBox{
@@ -187,8 +209,8 @@ QSpinBox{
     border: 1px solid lightgray;
 }
 QSpinBox:disabled{
-    background-color: @color5;
-    color: #C0C0C0;
+    background-color: @color9;
+    color: @color13;
     border: 1px solid lightgray;
 }
 QSpinBox::up-button {
@@ -209,14 +231,16 @@ QTableWidget{
     color: @color4;
     border: 1px solid #B8B8B8;
     font-family: "Ubuntu";
+    font-size: 10pt;
 }
 QTableWidget > QHeaderView{
     background-color: @color2;
     color: @color4;
+    font-size: 10pt;
 }
 QTableWidget > QHeaderView:disabled{
     background-color: @color2;
-    color: #C0C0C0;
+    color: @color13;
 }
 QTableWidget > QTableCornerButton{
     background-color: @color2;
@@ -224,7 +248,7 @@ QTableWidget > QTableCornerButton{
 }
 QTableWidget:disabled{
     background-color: @color7;
-    color: #C0C0C0;
+    color: @color13;
 }
 #tabWidget > QTabBar::tab {
     width: 132px; 
@@ -242,14 +266,14 @@ QTabBar::tab:disabled {
     color: rgb(150, 150, 150);
 }
 QTabWidget::pane { 
-    border: 1px solid #17365D;
+    border: 1px solid @color3;
 }
 QTabBar::tab {
     qproperty-alignment: AlignCenter;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d,   stop:0.85 #17365D, stop:1 #17365D);
-    border: 1px solid #17365D;
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d,   stop:0.85 @color3, stop:1 @color3);
+    border: 1px solid @color3;
     color:rgb(0, 220, 0);
     font: bold 10pt "Ubuntu";
     margin-right:1px;
@@ -272,8 +296,8 @@ QTextEdit{
 QTextEdit:disabled{
     border: 1px solid lightgray;
     border-radius: 0px;
-    background-color: @color7;
-    color: #C0C0C0;
+    background-color: @color9;
+    color: @color13;
     font-family: "Ubuntu";
 }
 QTreeView{
@@ -328,9 +352,9 @@ QTreeWidget::branch:closed:has-children:has-siblings {
 
 /*Specific*/
 QPushButton[objectName^="pushButton1_"]{
-    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d, stop:0.85 #17365D, stop:1 #17365D);
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d, stop:0.85 @color3, stop:1 @color3);
     color: rgb(255, 255, 255);
-    border: 1px solid #17365D;
+    border: 1px solid @color3;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     width:107px;
@@ -338,9 +362,9 @@ QPushButton[objectName^="pushButton1_"]{
     height: 21px;
 }
 QPushButton[objectName^="pushButton2_"]{
-    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d, stop:0.85 #17365D, stop:1 #17365D);
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d, stop:0.85 @color3, stop:1 @color3);
     color:rgb(0, 220, 0);
-    border: 1px solid #17365D;
+    border: 1px solid @color3;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     height:27px;
@@ -353,7 +377,7 @@ QPushButton[objectName^="pushButton_top"]{
     border-width: 2px;
     border-radius: 10px;
     /*border-color: #152947;*/
-    border-color:  #17365D;
+    border-color: @color3;
 }
 QPushButton[objectName^="pushButton_top"]:hover{
     color: @color4;
@@ -374,96 +398,111 @@ QPushButton#pushButton_top_iq{padding: 45px 0px 0px 94px;}
 QPushButton#pushButton_top_archive{padding: 45px 0px 0px 60px;}
 
 QFrame[objectName^="frame1_"]{
-    background-color: rgb(251, 251, 251);
-    border: 1px solid #17365D;
+    background-color: @color2;
+    border: 1px solid @color3;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
 }
 QFrame[objectName^="frame2_"]{
-    background-color: rgb(251, 251, 251);
-    border: 1px solid #17365D;
+    background-color: @color2;
+    border: 1px solid @color3;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
 }
-QFrame[objectName^="frame3_"]{border: 1px solid #17365D;}
+QFrame[objectName^="frame3_"]{border: 1px solid @color3;}
 QFrame[objectName^="frame4_"]{
-    background-color: rgb(251, 251, 251);
-    border: 1px solid #17365D;
+    background-color: @color2;
+    border: 1px solid @color3;
+}
+QFrame[objectName^="frame5_"]{
+    background-color: @color2;    
+    border: 1px solid lightgray;
 }
 QFrame[objectName^="frame6_"]{
-    background-color: rgb(244, 244, 244);    
-    border: 1px solid #17365D;
+    background-color: @color1;    
+    border: 1px solid @color3;
 }
 
 
-QTextEdit[objectName^="textEdit1_"]{border: 1px solid #17365D;}
+QTextEdit[objectName^="textEdit1_"]{border: 1px solid @color3;}
 QTextEdit[objectName^="textEdit2_"]{
-    border: 1px solid #17365D;
-    font-size: 10pt;
+    border: 1px solid @color3;
+    font: 10pt "Ubuntu";
 }
 
 
-QTableWidget[objectName^="tableWidget1_"]{border: 1px solid #17365D;}
-#tableWidget1_attack_flow_graph_current_values > QHeaderView {font-size: 10pt;}
-#tableWidget1_attack_packet_editor > QHeaderView {font-size: 10pt;}
-#treeWidget_attack_attacks > QHeaderView {font-size: 10pt;}
+QTableWidget[objectName^="tableWidget1_"]{border: 1px solid @color3;}
 
 QLabel[objectName^="label1_"]{
     qproperty-alignment: AlignCenter;
-    border: 1px solid #17365D;
+    border: 1px solid @color3;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
-    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d,   stop:0.85 #17365D, stop:1 #17365D);
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d,   stop:0.85 @color3, stop:1 @color3);
     padding: 0px 0px;
     color: rgb(255, 255, 255);
     max-height: 20px;
-    font-size: 10pt;
-    font-weight: bold;
+    font: bold 10pt "Ubuntu";
+}
+QLabel[objectName^="label2_"]{color: @color4;}
+QLabel[objectName^="label2_"]:disabled{color: @color13;}
+QLabel[objectName^="label3_"]{
+    color: @color4;
+    border: 1px solid lightgray;
 }
 QLabel#label4_status1{
+    color: @color4;
     max-height:13px; 
     max-width:90px;
-    font-size: 10pt;
+    font: 10pt "Ubuntu";
 }
 QPushButton#pushButton_status2{
+    color: @color4;
     max-height:13px; 
     max-width:90px;
-    font-size: 10pt;
+    font: 10pt "Ubuntu";
     border: none;
+    background-color: none;
 }
 QPushButton#pushButton_status3{
+    color: @color4;
     max-height:13px; 
     max-width:50px;
-    font-size: 10pt;
+    font: 10pt "Ubuntu";
     border: none;
+    background-color: none;
 }
 QPushButton#pushButton_status4{
+    color: @color4;
     max-height:13px; 
     max-width:50px;
-    font-size: 10pt;
+    font: 10pt "Ubuntu";
     border: none;
+    background-color: none;
 }
 QPushButton#pushButton_status5{
+    color: @color4;
     max-height:13px; 
     max-width:55px;
-    font-size: 10pt;
+    font: 10pt "Ubuntu";
     border: none;
+    background-color: none;
 }
 
 QStackedWidget[objectName^="stackedWidget1_"]{
-    background-color: rgb(251, 251, 251);
-    border: 1px solid #17365D;
+    background-color: @color2;
+    border: 1px solid @color3;
     border-radius: 15px;
 }
 QStackedWidget[objectName^="stackedWidget2_"]{
-    background-color: rgb(251, 251, 251);
-    border: 1px solid #17365D;
+    background-color: @color2;
+    border: 1px solid @color3;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
 }
-QStackedWidget[objectName^="stackedWidget3_"]{border: 1px solid #17365D;}
+QStackedWidget[objectName^="stackedWidget3_"]{border: 1px solid @color3;}
 
 
 #tabWidget_attack_fuzzing > QTabBar::tab {width: 150px;}
@@ -471,30 +510,19 @@ QStackedWidget[objectName^="stackedWidget3_"]{border: 1px solid #17365D;}
 
 
 QWidget#centralwidget{
-    background-color: rgb(244, 244, 244);
+    background-color: @color1;
 }
 
 
 QWidget#scrollAreaWidgetContents_2 {
-    background-color: rgb(244, 244, 244);
+    background-color: @color1;
 }
 
-QMenuBar#menubar {
-    background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,stop: 0 rgb(251, 251, 251), stop: 1 rgb(244, 244, 244));
-    color: rgb(0, 0, 0);
-    border-bottom: 1px solid lightGrey;
-}
-QMenuBar#menubar::item:selected {
-    background: transparent;
-    margin-bottom: @menu_hover_padding; 
-}
 
 QComboBox[objectName^="comboBox2_"]{
-    padding-left: 4px;
     font-size: 10pt;
 }
 QComboBox[objectName^="comboBox2_"]:disabled{
-    padding-left: 4px;
     font-size: 10pt;
 }
 QComboBox[objectName^="comboBox3_"]{
@@ -503,16 +531,25 @@ QComboBox[objectName^="comboBox3_"]{
 
 
 QTableWidget#tableWidget_status_headers{
-    background-color: rgb(244, 244, 244);
+    background-color: @color1;
 }
 QTableWidget#tableWidget_status_results{
-    background-color: rgb(244, 244, 244);
+    background-color: @color1;
 }
 
 QFrame[objectName^="line1_"]{background: @color3;min-width:1px;max-width: 1px; border:none;}
 QFrame[objectName^="line2_"]{background: @color1;}
 QFrame[objectName^="line3_"]{background: @color3;max-height: 1px; border:none;}
-QFrame#line_iq{border: 1px solid #17365D;}
+QFrame#line_iq{border: 1px solid @color3;}
+
+QDialog#OptionsDialog{background-color: @color1;}
+QDialog#HelpWindow{background-color: @color1;}
+QDialog#Dialog_chooser{background-color: @color1;}
+QDialog#Dialog_new_soi{background-color: @color1;}
+QDialog#SigMF_Window{background-color: @color1;}
+QDialog#Dialog_custom_color{background-color: @color1;}
+QDialog#Dialog_install{background-color: @color1;}
+QDialog#Dialog_install2{background-color: @color1;}
 
 QTreeWidget#treeWidget_software::item{
     height: 30px;
@@ -533,12 +570,12 @@ QTreeWidget#treeWidget_software {
 QPlainTextEdit#plainTextEdit_commands {
     border: 1px solid @color3;
     background-color: @color2;
-    color:black;
+    color:@color4;
 }
 
 QTreeView#treeWidget_attack_attacks > QHeaderView::section{
     color: @color5;
-    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d,   stop:0.85 #17365D, stop:1 #17365D);
+    background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 #e7eaee, stop:0.12 #455e7d, stop:0.3 #2e4a6d,   stop:0.85 @color3, stop:1 @color3);
     font: bold 10pt "Ubuntu";
     border: none;
     padding: 2px;
