--- a/UI/Style_Sheets/light.css
+++ b/UI/Style_Sheets/light.css
@@ -29,6 +29,9 @@ QComboBox{
     selection-color: #FFFFFF;
     selection-background-color: #308CC6;
 }
+QComboBox:editable {
+    color: @color12;
+}
 QComboBox QAbstractItemView {
     background-color: @color2;
     color: @color4;
