--- a/UI/dashboard.ui
+++ b/UI/dashboard.ui
@@ -18,7 +18,7 @@
   </property>
   <property name="windowIcon">
    <iconset>
-    <normaloff>../docs/Icons/logo_f.png</normaloff>../docs/Icons/logo_f.png</iconset>
+    <normaloff>../../.designer/docs/Icons/logo_f.png</normaloff>../../.designer/docs/Icons/logo_f.png</iconset>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout">
@@ -32408,6 +32408,7 @@ p, li { white-space: pre-wrap; }
      <addaction name="actionSdrGlut"/>
      <addaction name="actionGr_paint_Converter"/>
      <addaction name="actionIIO_Oscilloscope"/>
+     <addaction name="actionWebSDR"/>
     </widget>
     <widget class="QMenu" name="menu802_11_Tools_2">
      <property name="title">
@@ -32716,6 +32717,8 @@ p, li { white-space: pre-wrap; }
      <addaction name="actionAPT3000"/>
      <addaction name="actionEsri_Satellite_Map"/>
      <addaction name="actionAmateur_Satellite_Database"/>
+     <addaction name="actionOrbital_Element_Converter"/>
+     <addaction name="actionSatellite_Link_Budget"/>
     </widget>
     <widget class="QMenu" name="menu433_MHz">
      <property name="title">
@@ -32841,6 +32844,12 @@ p, li { white-space: pre-wrap; }
      <addaction name="menuQtDesigner"/>
      <addaction name="actionSystemback"/>
     </widget>
+    <widget class="QMenu" name="menuRailway">
+     <property name="title">
+      <string>Railway</string>
+     </property>
+     <addaction name="actionOpenRailwayMap"/>
+    </widget>
     <addaction name="menu433_MHz"/>
     <addaction name="menu802_11_Tools_2"/>
     <addaction name="menuAircraft"/>
@@ -32861,6 +32870,7 @@ p, li { white-space: pre-wrap; }
     <addaction name="menuPOCSAG"/>
     <addaction name="menuPoint_to_Point"/>
     <addaction name="menuRadiosonde"/>
+    <addaction name="menuRailway"/>
     <addaction name="menuRFID"/>
     <addaction name="menuSatellite"/>
     <addaction name="menuSDR_Tools_2"/>
@@ -32897,6 +32907,8 @@ p, li { white-space: pre-wrap; }
     <addaction name="actionProgramming_SDRs_with_GNU_Radio"/>
     <addaction name="actionLearn_SDR"/>
     <addaction name="actionComplextoreal_com"/>
+    <addaction name="actionCemaxecuter_YouTube"/>
+    <addaction name="actionIceman_YouTube"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuView"/>
@@ -34681,6 +34693,36 @@ p, li { white-space: pre-wrap; }
   <action name="actionCredits">
    <property name="text">
     <string>Credits</string>
+   </property>
+  </action>
+  <action name="actionOpenRailwayMap">
+   <property name="text">
+    <string>OpenRailwayMap</string>
+   </property>
+  </action>
+  <action name="actionOrbital_Element_Converter">
+   <property name="text">
+    <string>Orbital Element Converter</string>
+   </property>
+  </action>
+  <action name="actionSatellite_Link_Budget">
+   <property name="text">
+    <string>Satellite Link Budget</string>
+   </property>
+  </action>
+  <action name="actionWebSDR">
+   <property name="text">
+    <string>WebSDR</string>
+   </property>
+  </action>
+  <action name="actionCemaxecuter_YouTube">
+   <property name="text">
+    <string>cemaxecuter YouTube</string>
+   </property>
+  </action>
+  <action name="actionIceman_YouTube">
+   <property name="text">
+    <string>Iceman YouTube</string>
    </property>
   </action>
  </widget>
