--- a/UI/install.ui
+++ b/UI/install.ui
@@ -77,7 +77,7 @@
    <property name="frameShadow">
     <enum>QFrame::Raised</enum>
    </property>
-   <widget class="QRadioButton" name="radioButton_ubuntu22_04">
+   <widget class="QRadioButton" name="radioButton_ubuntu22_04_1">
     <property name="enabled">
      <bool>true</bool>
     </property>
@@ -90,7 +90,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Ubuntu 22.04</string>
+     <string>Ubuntu 22.04.1</string>
     </property>
    </widget>
    <widget class="QRadioButton" name="radioButton_dragonos_focalx">
@@ -100,7 +100,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>30</y>
+      <y>80</y>
       <width>185</width>
       <height>25</height>
      </rect>
@@ -116,7 +116,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>55</y>
+      <y>105</y>
       <width>185</width>
       <height>25</height>
      </rect>
@@ -132,7 +132,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>80</y>
+      <y>130</y>
       <width>185</width>
       <height>25</height>
      </rect>
@@ -141,10 +141,44 @@
      <string>BackBox Linux 8 (beta)</string>
     </property>
    </widget>
-   <zorder>radioButton_ubuntu22_04</zorder>
+   <widget class="QRadioButton" name="radioButton_ubuntu22_04_3">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>55</y>
+      <width>180</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Ubuntu 22.04.3</string>
+    </property>
+   </widget>
+   <widget class="QRadioButton" name="radioButton_ubuntu22_04_2">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>10</x>
+      <y>30</y>
+      <width>180</width>
+      <height>25</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Ubuntu 22.04.2</string>
+    </property>
+   </widget>
+   <zorder>radioButton_ubuntu22_04_1</zorder>
    <zorder>radioButton_kali_2023_1</zorder>
    <zorder>radioButton_dragonos_focalx</zorder>
    <zorder>radioButton_backbox_linux_8</zorder>
+   <zorder>radioButton_ubuntu22_04_3</zorder>
+   <zorder>radioButton_ubuntu22_04_2</zorder>
   </widget>
  </widget>
  <resources/>
