--- a/UI/hardware_select.ui
+++ b/UI/hardware_select.ui
@@ -1181,6 +1181,22 @@ p, li { white-space: pre-wrap; }
           <enum>Unchecked</enum>
          </property>
         </item>
+        <item>
+         <property name="text">
+          <string>RSPduo</string>
+         </property>
+         <property name="checkState">
+          <enum>Unchecked</enum>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>RSPdx</string>
+         </property>
+         <property name="checkState">
+          <enum>Unchecked</enum>
+         </property>
+        </item>
        </widget>
        <widget class="QPushButton" name="pushButton_scan_1">
         <property name="enabled">
@@ -3250,6 +3266,22 @@ p, li { white-space: pre-wrap; }
           <enum>Unchecked</enum>
          </property>
         </item>
+        <item>
+         <property name="text">
+          <string>RSPduo</string>
+         </property>
+         <property name="checkState">
+          <enum>Unchecked</enum>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>RSPdx</string>
+         </property>
+         <property name="checkState">
+          <enum>Unchecked</enum>
+         </property>
+        </item>
        </widget>
        <widget class="QPushButton" name="pushButton_scan_2">
         <property name="enabled">
@@ -4573,6 +4605,22 @@ p, li { white-space: pre-wrap; }
         <item>
          <property name="text">
           <string>USRP X410</string>
+         </property>
+         <property name="checkState">
+          <enum>Unchecked</enum>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>RSPduo</string>
+         </property>
+         <property name="checkState">
+          <enum>Unchecked</enum>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>RSPdx</string>
          </property>
          <property name="checkState">
           <enum>Unchecked</enum>
@@ -6300,6 +6348,22 @@ p, li { white-space: pre-wrap; }
           <enum>Unchecked</enum>
          </property>
         </item>
+        <item>
+         <property name="text">
+          <string>RSPduo</string>
+         </property>
+         <property name="checkState">
+          <enum>Unchecked</enum>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>RSPdx</string>
+         </property>
+         <property name="checkState">
+          <enum>Unchecked</enum>
+         </property>
+        </item>
        </widget>
        <widget class="QPushButton" name="pushButton_scan_4">
         <property name="enabled">
@@ -7995,6 +8059,22 @@ p, li { white-space: pre-wrap; }
         <item>
          <property name="text">
           <string>USRP X410</string>
+         </property>
+         <property name="checkState">
+          <enum>Unchecked</enum>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>RSPduo</string>
+         </property>
+         <property name="checkState">
+          <enum>Unchecked</enum>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>RSPdx</string>
          </property>
          <property name="checkState">
           <enum>Unchecked</enum>
